--- a/Diagnosis.Common/Diagnosis.Common.csproj
+++ b/Diagnosis.Common/Diagnosis.Common.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Mediator\EventMessageHandlersManager.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Attributes\LocalizableDescriptionAttribute.cs" />
+    <Compile Include="Util\History.cs" />
     <Compile Include="Util\PasswordService.cs" />
     <Compile Include="Util\PerformanceTester.cs" />
     <Compile Include="Util\ReentrantFlag.cs" />
