--- a/Diagnosis.Common.Tests/Diagnosis.Common.Tests.csproj
+++ b/Diagnosis.Common.Tests/Diagnosis.Common.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="DateFormatterTest.cs" />
     <Compile Include="DateHelperTest.cs" />
     <Compile Include="EnumerableExtensionsTest.cs" />
+    <Compile Include="HistoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionTest.cs" />
     <Compile Include="TimeSpanFormatterTest.cs" />
