data. Move SearchOptions to model, OptionsLoader to Data, make Loader abstract

--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -196,6 +196,8 @@
     <Compile Include="..\GeneralAssemblyInfo.cs">
       <Link>Properties\GeneralAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DTOs\OptionsLoader.cs" />
+    <Compile Include="DTOs\SearchOptionsDTO.cs" />
     <Compile Include="DTOs\_ModelDtosMapper.cs" />
     <Compile Include="DTOs\HrCategoryDTO.cs" />
     <Compile Include="DTOs\MeasureOpDTO.cs" />
