--- a/Diagnosis.Data.Tests/Diagnosis.Data.Tests.csproj
+++ b/Diagnosis.Data.Tests/Diagnosis.Data.Tests.csproj
@@ -85,6 +85,7 @@
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
     <Compile Include="HrQueryTest.cs" />
+    <Compile Include="OptionsLoaderTest.cs" />
     <Compile Include="OrderedBagTest.cs" />
     <Compile Include="PersistTest.cs" />
     <Compile Include="QueryTest.cs" />
