code. Rename ConfWithHio, EventDateViewModel, move MeasureOp

--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -143,9 +143,10 @@
     <Compile Include="..\GeneralAssemblyInfo.cs">
       <Link>Properties\GeneralAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Domain\MeasureOp.cs" />
     <Compile Include="Domain\SearchOptions.cs" />
     <Compile Include="Entities\Admin.cs" />
-    <Compile Include="Entities\Chio.cs" />
+    <Compile Include="Domain\Chio.cs" />
     <Compile Include="Domain\DateOffset.cs" />
     <Compile Include="Entities\Passport.cs" />
     <Compile Include="Entities\HrItem.cs" />
