--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -198,7 +198,10 @@
     <Compile Include="ValidatableEntity.cs" />
     <Compile Include="Validators\AppointmentValidator.cs" />
     <Compile Include="Validators\CourseValidator.cs" />
+    <Compile Include="Validators\CriterionGroupValidator.cs" />
+    <Compile Include="Validators\EstimatorValidator.cs" />
     <Compile Include="Validators\DoctorValidator.cs" />
+    <Compile Include="Validators\CriterionValidator.cs" />
     <Compile Include="Validators\VocabularyValidator.cs" />
     <Compile Include="Validators\SpecialityValidator.cs" />
     <Compile Include="Validators\UomValidator.cs" />
