data. Add Relation Helper

--- a/Diagnosis.Data.Tests/Diagnosis.Data.Tests.csproj
+++ b/Diagnosis.Data.Tests/Diagnosis.Data.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="BagTest.cs" />
     <Compile Include="PersistTest.cs" />
     <Compile Include="QueryTest.cs" />
+    <Compile Include="RelationHelperTest.cs" />
     <Compile Include="ScopesTest.cs" />
     <Compile Include="SyncerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
