--- a/Diagnosis.Client.App/Diagnosis.Client.App.csproj
+++ b/Diagnosis.Client.App/Diagnosis.Client.App.csproj
@@ -294,8 +294,12 @@
     <Compile Include="Controls\FormParts\ConfirmPasswordControl.xaml.cs">
       <DependentUpon>ConfirmPasswordControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Search\SearchResultDataTemplateSelector.cs" />
     <Compile Include="Controls\Search\QueryEditor.xaml.cs">
       <DependentUpon>QueryEditor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Search\CritSearchResult.xaml.cs">
+      <DependentUpon>CritSearchResult.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\DateOffsetConverters.cs" />
     <Compile Include="Controls\Search\OldQueryBlock.xaml.cs">
@@ -468,6 +472,10 @@
     <Page Include="Controls\Search\QueryEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Search\CritSearchResult.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\Search\SearchResult.xaml">
       <Generator>MSBuild:Compile</Generator>
