--- a/Diagnosis.Data.Tests/Diagnosis.Data.Tests.csproj
+++ b/Diagnosis.Data.Tests/Diagnosis.Data.Tests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="QueryTest.cs" />
     <Compile Include="RelationHelperTest.cs" />
     <Compile Include="ScopesTest.cs" />
+    <Compile Include="SearcherTest.cs" />
     <Compile Include="SyncerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VocLoaderTest.cs" />
