autocomplete. SuggestionsMaker created words are unique by title
tests CreateWordInQueryEditor_ThanInWordList, CreateWordInQueryEditorTwice,
CopyNewWord_Save_PasteToOtherAutocomplete2

query by title in syncWord

--- a/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
+++ b/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="DateOffsetFormatterTest.cs" />
     <Compile Include="DateOffsetVMTest.cs" />
     <Compile Include="FilterTest.cs" />
+    <Compile Include="Helpers.cs" />
     <Compile Include="QueryEditorTest.cs" />
     <Compile Include="PatientEditorTest.cs" />
     <Compile Include="MeasureEditorTest.cs" />
