--- a/Diagnosis.Client.App/Diagnosis.Client.App.csproj
+++ b/Diagnosis.Client.App/Diagnosis.Client.App.csproj
@@ -149,6 +149,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
+    <Reference Include="CalcBinding">
+      <HintPath>..\packages\CalcBinding.2.2.2.0\lib\net40\CalcBinding.dll</HintPath>
+    </Reference>
+    <Reference Include="DynamicExpresso.Core">
+      <HintPath>..\packages\DynamicExpresso.Core.1.1.0.0\lib\net40\DynamicExpresso.Core.dll</HintPath>
+    </Reference>
     <Reference Include="EventAggregator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\EventAggregator.dll</HintPath>
