--- a/Diagnosis.Client.App/packages.config
+++ b/Diagnosis.Client.App/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CalcBinding" version="2.2.2.0" targetFramework="net40" />
+  <package id="DynamicExpresso.Core" version="1.1.0.0" targetFramework="net40" />
   <package id="Extended.Wpf.Toolkit" version="2.3" targetFramework="net40" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
   <package id="Kent.Boogaart.Converters" version="1.3.1" targetFramework="net40" />
