--- a/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
+++ b/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
@@ -336,6 +336,9 @@
   <ItemGroup>
     <Resource Include="Resources\Images\Find_5650.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\pencil_005_16xLG.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
