--- a/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
+++ b/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
@@ -98,6 +98,7 @@
     <Compile Include="HrEditorTest.cs" />
     <Compile Include="HrListTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatisticTest.cs" />
     <Compile Include="SuggestionsMakerTest.cs" />
     <Compile Include="SearchTest.cs" />
     <Compile Include="ViewModelTest.cs" />
