--- a/Diagnosis.Models.Tests/Diagnosis.Models.Tests.csproj
+++ b/Diagnosis.Models.Tests/Diagnosis.Models.Tests.csproj
@@ -81,6 +81,7 @@
     <Compile Include="..\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="ExtenstionsTest.cs" />
     <Compile Include="WordTest.cs" />
     <Compile Include="CourseTest.cs" />
     <Compile Include="DateOffsetTest.cs" />
