--- a/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
+++ b/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
@@ -200,6 +200,7 @@
     <Compile Include="..\GeneralAssemblyInfo.cs">
       <Link>Properties\GeneralAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Behaviors\Square.cs" />
     <Compile Include="Behaviors\HelpProvider.cs" />
     <Compile Include="Behaviors\Attached.cs" />
     <Compile Include="Behaviors\ClipboardBehavior.cs" />
@@ -224,6 +225,9 @@
       <DependentUpon>DragControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Common\DragMarker.cs" />
+    <Compile Include="Controls\Common\MenuItemIcon.xaml.cs">
+      <DependentUpon>MenuItemIcon.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Common\RadioListBox.xaml.cs">
       <DependentUpon>RadioListBox.xaml</DependentUpon>
     </Compile>
@@ -292,6 +296,10 @@
     <Page Include="Controls\Common\DragControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Common\MenuItemIcon.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\Common\RadioListBox.xaml">
       <Generator>MSBuild:Compile</Generator>
